fixed spacing again

--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@ header video {
     background-color: #3d3d3d;
     padding-right: 8em;
     padding-left: 8em;
-    padding-top: 14.7em;
+    padding-top: 15em;
     padding-bottom: 11em;
 }
 
